--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,25 @@ body {
 }
 
 .movieWrapper {
-  height: 25rem;
-  width: 15rem;
+  height: 36rem;
+  width: 25rem;
+  display: inline-block;
+  margin: 5rem;
 }
 
 .imgWrapper {
-  height: 20rem;
+  height: 30rem;
   width: 100%;
+  border: 1px solid #efefef;
 }
 
 .imgWrapper img {
   height: inherit;
+  width: 100%;
+}
+
+.textWrapper {
+  margin-top: 1rem;
+  height: 5rem;
   width: 100%;
 }
