--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,18 @@ body {
   font-weight: 100;
   font-size: 20px;
   text-align: center;
-  font-variant: small-caps;;
+  font-variant: small-caps;
 }
 
 .movieWrapper {
-  height: 36rem;
-  width: 25rem;
+  height: 56rem;
+  width: 45rem;
   display: inline-block;
   margin: 5rem;
 }
 
 .imgWrapper {
-  height: 30rem;
+  height: 45rem;
   width: 100%;
   border: 1px solid #efefef;
 }
@@ -26,6 +26,6 @@ body {
 
 .textWrapper {
   margin-top: 1rem;
-  height: 5rem;
+  height: 10rem;
   width: 100%;
 }
